# Auto

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  flowchart.md  pyproject.toml  requirements.txt  toyota_search_inventory.html  toyota_search_inventory_tool.js
.github/workflows/: ci.yml
apps/mobile/: README.md
apps/web/: README.md  index.html  package-lock.json  package.json
database/: README.md
database/migrations/: 0001_initial.sql  0002_offer_observation.sql  0003_offer_price_history.sql  0004_saved_search.sql  0005_saved_search_alert.sql  0006_negotiation_session_linkage.sql  0007_negotiation_session_job_lifecycle.sql  0008_negotiation_session_autopilot.sql  0009_negotiation_session_playbook.sql
database/schema/: schema.sql
database/seeds/: seed_dev.sql
docs/: README.md
docs/api/: endpoints.md
docs/architecture/: negotiation-flow.md  system-overview.md
docs/flowcharts/: scraper-pipeline-flowchart.md
docs/product/: roadmap.md
docs/runbooks/: local-dev.md  proxmox-deploy.md  proxmox-install-deploy.md
docs/security/: compliance.md
infra/docker/: README.md
infra/terraform/: README.md
libs/config/: README.md  base.yaml
libs/ui-components/: README.md
scripts/ci/: lint.ps1  lint.py  test.ps1  test.py
scripts/db/: migrate.ps1  migrate.py
scripts/deploy/: bootstrap-local-proxmox.sh  proxmox-deploy.sh
scripts/dev/: bootstrap.ps1  bootstrap.py  migrate.py  run-autopilot-scheduler.py  run-communication.ps1  run-communication.py  run-fallback-ingest.py  run-local.ps1  (+7 more)
tests/: README.md
(+85 files in other folders)
