[project]
name = "autohaggle-ai"
version = "0.1.0"
description = "AutoHaggle AI backend services"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "langgraph>=0.2.0,<0.7.0",
  "redis>=5.0.0,<6.0.0",
  "rq>=1.16.0,<2.0.0",
  "sendgrid>=6.11.0,<7.0.0",
  "twilio>=9.2.0,<10.0.0",
  "httpx>=0.27.0,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
